# backend/dogwalkers/api/controllers/attributes.js
@@ -1,0 +1,10 @@
+const _ = require('lodash');
+const Q = require('q');
+
+module.exports = {
+	getAttributes: getAttributes
+}
+
+function getAttributes (req, res, next) {
+	res.json();
+}
